--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,9 +132,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/HUD.HUD
-OpenAssetsAtExit=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.EditorCube11_5
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -145,10 +142,10 @@ StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
-StaticMeshActor.Lighting=False
-StaticMeshActor.Rendering=False
-StaticMeshActor.Tags=False
-StaticMeshActor.Cooking=False
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
 FirstPersonCharacter_C.Default=True
 FirstPersonCharacter_C.Tick=True
@@ -465,24 +462,122 @@ ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
 HUD_C.Designer=True
 HUD_C.Layout=True
-StaticMeshActor.AssetUserData=False
-StaticMeshActor.Navigation=False
-StaticMeshActor.Mobile=False
-StaticMeshActor.HLOD=False
+StaticMeshActor.AssetUserData=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.Mobile=True
+StaticMeshActor.HLOD=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+Drop_Test_C.Tags=True
+Drop_Test_C.Activation=True
+Drop_Test_C.Cooking=True
+Drop_Test_C.ComponentTick=True
+Drop_Test_C.ComponentReplication=True
+Drop_Test_C.Variable=True
+Shape_Cylinder_Blueprint_C.TransformCommon=True
+Shape_Cylinder_Blueprint_C.StaticMesh=True
+Shape_Cylinder_Blueprint_C.Materials=True
+Shape_Cylinder_Blueprint_C.Physics=True
+Shape_Cylinder_Blueprint_C.Collision=True
+Shape_Cylinder_Blueprint_C.Lighting=True
+Shape_Cylinder_Blueprint_C.Rendering=True
+Shape_Cylinder_Blueprint_C.Tags=True
+Shape_Cylinder_Blueprint_C.Cooking=True
+Shape_Cylinder_Blueprint_C.Input=True
+Shape_Cylinder_Blueprint_C.Actor=True
+Shape_Cylinder_Blueprint_C.Tick=True
+Shape_Cylinder_Blueprint_C.Replication=True
+Shape_Cylinder_Blueprint_C.HLOD=True
+Shape_Cylinder_Blueprint_C.AssetUserData=True
+Shape_Cylinder_Blueprint_C.Navigation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+Shape_Cylinder_Blueprint_C.Default=True
+REINST_Shape_Cylinder_Blueprint_C_83.Tick=True
+REINST_Shape_Cylinder_Blueprint_C_83.None=True
+REINST_Shape_Cylinder_Blueprint_C_83.Actor=True
+REINST_Shape_Cylinder_Blueprint_C_83.Rendering=True
+REINST_Shape_Cylinder_Blueprint_C_83.Replication=True
+REINST_Shape_Cylinder_Blueprint_C_83.Input=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=False
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+Shape_Cylinder_Blueprint_C.Variable=True
+Shape_Cylinder_Blueprint_C.Sockets=True
+Shape_Cylinder_Blueprint_C.ComponentReplication=True
+Shape_Cylinder_Blueprint_C.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Events=True
+REINST_Shape_Cylinder_Blueprint_C_173.TransformCommon=True
+REINST_Shape_Cylinder_Blueprint_C_173.StaticMesh=True
+REINST_Shape_Cylinder_Blueprint_C_173.Materials=True
+REINST_Shape_Cylinder_Blueprint_C_173.Physics=True
+REINST_Shape_Cylinder_Blueprint_C_173.Collision=True
+REINST_Shape_Cylinder_Blueprint_C_173.Lighting=True
+REINST_Shape_Cylinder_Blueprint_C_173.Rendering=True
+REINST_Shape_Cylinder_Blueprint_C_173.Tags=True
+REINST_Shape_Cylinder_Blueprint_C_173.Cooking=True
+REINST_Shape_Cylinder_Blueprint_C_173.Input=True
+REINST_Shape_Cylinder_Blueprint_C_173.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem0=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
 MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem5=/Game/FirstPersonBP/Blueprints/HUDBluePrint
-MRUItem6=/Game/FirstPersonBP/HUD
-MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem8=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem2=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem4=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem6=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem7=/Game/FirstPersonBP/Blueprints/HUDbp
+MRUItem8=/Game/FirstPersonBP/Blueprints/HUDBluePrint
+MRUItem9=/Game/FirstPersonBP/HUD
+MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem11=/Game/FirstPersonBP/FirstPersonOverview
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -490,6 +585,11 @@ LastLogListing=PIE
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
 /Game/FirstPersonBP/Blueprints/HUDBluePrint.HUDBluePrint=1
+/Game/FirstPersonBP/Blueprints/Drop_Test.Drop_Test=1
+/Game/FirstPersonBP/Blueprints/HUD.HUD=1
+/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder=1
+/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint.Shape_Cylinder_Blueprint=1
+/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1169,12 +1269,23 @@ bCanPreviewSwapAspectRatio=False
 
 [DetailPropertyExpansion]
 EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout"
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object="\"Object.Tags.ComponentTags\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
+StaticMeshActor=
+Shape_Cylinder_Blueprint_C=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Tags.ComponentTags\" "
+REINST_Shape_Cylinder_Blueprint_C_173="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
 
 [DetailCategoriesAdvanced]
 TextBlock.Appearance=True
@@ -1185,10 +1296,123 @@ StaticMeshActor.Collision=True
 StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=False
 StaticMeshActor.Actor=True
+StaticMeshComponent.Rendering=True
+StaticMeshActor.Physics=True
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=False
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[DetailCustomWidgetExpansion]
+StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+Shape_Cylinder_Blueprint_C=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
+StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
+BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
+K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
+
+[PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim.Shape_Trim;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
