update w/ silhouette material

--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,6 +132,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ngc6357_Mat.ngc6357_Mat
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -561,20 +562,70 @@ REINST_Shape_Cylinder_Blueprint_C_173.Tags=True
 REINST_Shape_Cylinder_Blueprint_C_173.Cooking=True
 REINST_Shape_Cylinder_Blueprint_C_173.Input=True
 REINST_Shape_Cylinder_Blueprint_C_173.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+Shape_Cylinder_Blueprint_C.LOD=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionAtmosphericFogColor.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialEditorPreviewParameters.ParameterGroups=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem4=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem6=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem7=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem8=/Game/FirstPersonBP/Blueprints/HUDBluePrint
-MRUItem9=/Game/FirstPersonBP/HUD
-MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem11=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem0=/Game/ngc6357_Mat
+MRUItem1=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem5=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem7=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem8=/Game/FirstPersonBP/Blueprints/HUDbp
+MRUItem9=/Game/FirstPersonBP/Blueprints/HUDBluePrint
+MRUItem10=/Game/FirstPersonBP/HUD
+MRUItem11=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem12=/Game/FirstPersonBP/FirstPersonOverview
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -590,6 +641,7 @@ LastLogListing=MapCheck
 /Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder=1
 /Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint.Shape_Cylinder_Blueprint=1
 /Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
+/Game/ngc6357_Mat.ngc6357_Mat=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1271,7 +1323,7 @@ bCanPreviewSwapAspectRatio=False
 EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout"
 Widget=
 Visual=
-Object="\"Object.Tags.ComponentTags\" "
+Object=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 StaticMeshActor=
@@ -1319,6 +1371,9 @@ bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
 LodDistance1=0.000000
@@ -1330,13 +1385,14 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [DetailCustomWidgetExpansion]
-StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+StaticMeshActor=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 Shape_Cylinder_Blueprint_C=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
 StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
 BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
-K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,
+K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/ngc6357.ngc6357;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim.Shape_Trim;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
 
@@ -1414,5 +1470,43 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
