--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ngc6357_Mat.ngc6357_Mat
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -489,7 +488,7 @@ Shape_Cylinder_Blueprint_C.Materials=True
 Shape_Cylinder_Blueprint_C.Physics=True
 Shape_Cylinder_Blueprint_C.Collision=True
 Shape_Cylinder_Blueprint_C.Lighting=True
-Shape_Cylinder_Blueprint_C.Rendering=True
+Shape_Cylinder_Blueprint_C.Rendering=False
 Shape_Cylinder_Blueprint_C.Tags=True
 Shape_Cylinder_Blueprint_C.Cooking=True
 Shape_Cylinder_Blueprint_C.Input=True
@@ -611,21 +610,56 @@ MaterialExpressionAppendVector.MaterialExpression=True
 MaterialExpressionPanner.MaterialExpressionPanner=True
 MaterialExpressionPanner.MaterialExpression=True
 MaterialEditorPreviewParameters.ParameterGroups=True
+REINST_Shape_Cylinder_Blueprint_C_277.TransformCommon=True
+REINST_Shape_Cylinder_Blueprint_C_277.StaticMesh=True
+REINST_Shape_Cylinder_Blueprint_C_277.Materials=True
+REINST_Shape_Cylinder_Blueprint_C_277.Physics=True
+REINST_Shape_Cylinder_Blueprint_C_277.Collision=True
+REINST_Shape_Cylinder_Blueprint_C_277.Lighting=True
+REINST_Shape_Cylinder_Blueprint_C_277.Rendering=True
+REINST_Shape_Cylinder_Blueprint_C_277.Tags=True
+REINST_Shape_Cylinder_Blueprint_C_277.Cooking=True
+REINST_Shape_Cylinder_Blueprint_C_277.Input=True
+REINST_Shape_Cylinder_Blueprint_C_277.Actor=True
+REINST_Shape_Cylinder_Blueprint_C_277.Variable=True
+REINST_Shape_Cylinder_Blueprint_C_277.Sockets=True
+REINST_Shape_Cylinder_Blueprint_C_277.ComponentReplication=True
+REINST_Shape_Cylinder_Blueprint_C_277.Events=True
+REINST_Shape_Cylinder_Blueprint_C_281.Variable=True
+REINST_Shape_Cylinder_Blueprint_C_281.TransformCommon=True
+REINST_Shape_Cylinder_Blueprint_C_281.Sockets=True
+REINST_Shape_Cylinder_Blueprint_C_281.StaticMesh=True
+REINST_Shape_Cylinder_Blueprint_C_281.Materials=True
+REINST_Shape_Cylinder_Blueprint_C_281.Physics=True
+REINST_Shape_Cylinder_Blueprint_C_281.Collision=True
+REINST_Shape_Cylinder_Blueprint_C_281.Lighting=True
+REINST_Shape_Cylinder_Blueprint_C_281.Rendering=True
+REINST_Shape_Cylinder_Blueprint_C_281.Tags=True
+REINST_Shape_Cylinder_Blueprint_C_281.ComponentReplication=True
+REINST_Shape_Cylinder_Blueprint_C_281.Cooking=True
+REINST_Shape_Cylinder_Blueprint_C_281.Events=True
+AssetViewerSettings.Settings=True
+AssetViewerSettings.Color Grading=True
+AssetViewerSettings.Lens=True
+AssetViewerSettings.Rendering Features=True
+StaticMesh.Thumbnail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ngc6357_Mat
+MRUItem0=/Game/Geometry/Meshes/Import/cablebox_pCube2
 MRUItem1=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem5=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem7=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem8=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem9=/Game/FirstPersonBP/Blueprints/HUDBluePrint
-MRUItem10=/Game/FirstPersonBP/HUD
-MRUItem11=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem12=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem2=/Game/Geometry/Meshes/Import/cablebox_pCube1
+MRUItem3=/Game/ngc6357_Mat
+MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem5=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem7=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem9=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem10=/Game/FirstPersonBP/Blueprints/HUDbp
+MRUItem11=/Game/FirstPersonBP/Blueprints/HUDBluePrint
+MRUItem12=/Game/FirstPersonBP/HUD
+MRUItem13=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem14=/Game/FirstPersonBP/FirstPersonOverview
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -642,6 +676,8 @@ LastLogListing=MapCheck
 /Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint.Shape_Cylinder_Blueprint=1
 /Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
 /Game/ngc6357_Mat.ngc6357_Mat=1
+/Game/Geometry/Meshes/Import/cablebox_pCube2.cablebox_pCube2=1
+/Game/Geometry/Meshes/Import/cablebox_pCube1.cablebox_pCube1=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1323,12 +1359,12 @@ bCanPreviewSwapAspectRatio=False
 EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout"
 Widget=
 Visual=
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.Navigation.NavCollision.Object.Navigation.BoxCollision\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-StaticMeshActor=
-Shape_Cylinder_Blueprint_C=
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
+Shape_Cylinder_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.Navigation.NavCollision.Object.Navigation.BoxCollision\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Tags.ComponentTags\" "
@@ -1350,6 +1386,10 @@ StaticMeshActor.Materials=False
 StaticMeshActor.Actor=True
 StaticMeshComponent.Rendering=True
 StaticMeshActor.Physics=True
+Shape_Cylinder_Blueprint_C.Rendering=True
+Shape_Cylinder_Blueprint_C.Lighting=True
+PreviewMaterial.Translucency=True
+StaticMeshComponent.Collision=True
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -1392,6 +1432,16 @@ BoolProperty=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinde
 K2Node_VariableGet=Shape_Cylinder_Blueprint_C.Rendering.TextureStreaming,Shape_Cylinder_Blueprint_C.Rendering.LOD,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/Import/aiStandardSurface2.aiStandardSurface2;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/cablebox_pCube2.cablebox_pCube2;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/couch_fbm/couch_lambert1_Mat.couch_lambert1_Mat;
+RecentlyPlaced=/Game/ngc6357_Mat.ngc6357_Mat;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/bookshelf.bookshelf;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/cablebox_pCube1.cablebox_pCube1;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/couch_fbm/couch_lambert1_BaseColor.couch_lambert1_BaseColor;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/couch_fbm/couch_lambert1_Normal.couch_lambert1_Normal;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/couch_fbm/couch_lambert1_Roughness.couch_lambert1_Roughness;
+RecentlyPlaced=/Game/Geometry/Meshes/Import/chair_pCube6.chair_pCube6;
 RecentlyPlaced=/Game/ngc6357.ngc6357;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim.Shape_Trim;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
@@ -1472,7 +1522,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MaterialEditor]
-PrimType=1
+PrimType=2
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
