--- a/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/project4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,12 +126,14 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -643,26 +645,37 @@ AssetViewerSettings.Color Grading=True
 AssetViewerSettings.Lens=True
 AssetViewerSettings.Rendering Features=True
 StaticMesh.Thumbnail=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Import/cablebox_pCube2
-MRUItem1=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
-MRUItem2=/Game/Geometry/Meshes/Import/cablebox_pCube1
-MRUItem3=/Game/ngc6357_Mat
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem5=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem7=/Game/FirstPersonBP/Blueprints/HUD
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem9=/Game/FirstPersonBP/Blueprints/Drop_Test
-MRUItem10=/Game/FirstPersonBP/Blueprints/HUDbp
-MRUItem11=/Game/FirstPersonBP/Blueprints/HUDBluePrint
-MRUItem12=/Game/FirstPersonBP/HUD
-MRUItem13=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem14=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem0=/Game/ngc6357_Mat
+MRUItem1=/Engine/Functions/Engine_MaterialFunctions02/Fresnel_Function
+MRUItem2=/Game/Geometry/Meshes/Import/cablebox_pCube2
+MRUItem3=/Game/FirstPersonBP/Blueprints/Shape_Cylinder_Blueprint
+MRUItem4=/Game/Geometry/Meshes/Import/cablebox_pCube1
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem6=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem8=/Game/FirstPersonBP/Blueprints/HUD
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem10=/Game/FirstPersonBP/Blueprints/Drop_Test
+MRUItem11=/Game/FirstPersonBP/Blueprints/HUDbp
+MRUItem12=/Game/FirstPersonBP/Blueprints/HUDBluePrint
+MRUItem13=/Game/FirstPersonBP/HUD
+MRUItem14=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem15=/Game/FirstPersonBP/FirstPersonOverview
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -678,6 +691,7 @@ LastLogListing=MapCheck
 /Game/ngc6357_Mat.ngc6357_Mat=1
 /Game/Geometry/Meshes/Import/cablebox_pCube2.cablebox_pCube2=1
 /Game/Geometry/Meshes/Import/cablebox_pCube1.cablebox_pCube1=1
+/Engine/Functions/Engine_MaterialFunctions02/Fresnel_Function.Fresnel_Function=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1359,7 +1373,7 @@ bCanPreviewSwapAspectRatio=False
 EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout"
 Widget=
 Visual=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.Navigation.NavCollision.Object.Navigation.BoxCollision\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[1].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[2].Object.ParameterValue\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
@@ -1374,6 +1388,11 @@ CapsuleComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Tags.ComponentTags\" "
 REINST_Shape_Cylinder_Blueprint_C_173="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
+MaterialEditorPreviewParameters="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[1].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[2].Object.ParameterValue\" "
+MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" "
+MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 
 [DetailCategoriesAdvanced]
 TextBlock.Appearance=True
